# IoTCryptojacking

./: .gitattributes  .gitignore  README.md  imbalanced_dataset_experiments.py  pyproject.toml  start.sh  utils.py
Code/: Transferability experiments.ipynb
data/malicious_benign_2/: all_combined_s0_results.csv  binary_s3_results.csv  desktop_s1_results.csv  fully_compromised_s4_results.csv  inbrowser_s3_results.csv  iot_compromised_s7_results.csv  partially_compromised_s5_results.csv  raspberry_s1_results.csv  server_s1_results.csv  single_compromised_s6_results.csv  thr_100_s2_results.csv  thr_10_s2_results.csv  thr_50_s2_results.csv  webos_s1_results.csv
data/malicious_vs_benign_1/: results_s0_all_combined.csv  results_s1_iot.csv  results_s1_laptop.csv  results_s1_server.csv  results_s2_thr10.csv  results_s2_thr100.csv  results_s2_thr50.csv  results_s3_binary.csv  results_s3_in_browser.csv  results_s4_fully_compromised.csv  results_s5_iot_laptop.csv  (+2 more)
notebooks/: sample_notebook.ipynb
report/: README.md  authors.yml  main.typ  refs.bib
scripts/: all_scenarios_1.sh  evaluate.py  imbalanced.sh  imbalanced_dataset.sh  imbalanced_ml.sh  mb2_dataset.sh  mb2_ml.sh  mb2_slurm_dataset.sh  mb2_slurm_ml.sh  non_default_dataset.sh  non_default_ml.sh  non_default_slurm_dataset.sh  non_default_slurm_ml.sh  plot_malicious.py  pretty_print_results.sh  run_file.sh  run_our_paper_experiment.sh  run_slurm.sh  run_slurm_multi.sh  run_slurm_single.sh  transferability_dataset.sh  transferability_ml.sh  transferability_slurm_dataset.sh  transferability_slurm_ml.sh
(+171 files in other folders)
