[project]
name = "iotcryptojacking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pycatch22>=0.4.5",
    "scapy>=2.7.0",
    "scikit-learn>=1.8.0",
    "tsfresh>=0.21.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "microsoft-python-type-stubs",
    "plotly>=6.7.0",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
typeCheckingMode = "basic" # Options: "off", "basic", "standard", "strict"
pythonVersion = "3.11"
pythonPlatform = "Linux"
